# Bath-Hack-2026

./: .gitignore  Interface.py  ShortcutPlayer.py  app.py  bindings.py  buildgesture.py  gesture.py  keyboard.py  maps.json  pyproject.toml  video.py
CameraAI/: CamAI.py  ai_vision.py  cam_ai.py  saved_gestures.json
components/: Interface.py  bindings.py  camera_selector.py  gesture_map.py
