[project]
name = "bathhack"
version = "0.1.0"
description = ""
authors = [
    {name = "maurice-borys",email = "brillbusmorriss@gmail.com"}
]
requires-python = "^3.14"
dependencies = [
    "pynput (>=1.8.1,<2.0.0)"
]

[tool.poetry]
# Stops dir having to match project name
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"